# game-pro

./: .gitignore  README.md
all_go/: ai.go  ai.go~  card.go  desk.go  hand.go  player.go
client/: CMakeLists.txt  main.cpp
poker_ai/: CMakeLists.txt  CMakeLists.txt~  ai.cpp  ai.cpp~  ai.h  card.cpp  card.h  config.cpp  config.h  daemon.h  hand.cpp  hand.h  machine.cpp  machine.h  main.cpp  mygame.cpp  mygame.cpp~  mygame.h  player.cpp  player.h  readme.md~  tools.cpp  tools.h
tcp/: CMakeLists.txt  main.cpp
test_card/: CMakeLists.txt  main.cpp
